# CopyCat

./: .gitignore  README.md
Allegro_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
Allegro_moveit_config/config/: allegro_hand_right.ros2_control.xacro  allegro_hand_right.srdf  initial_positions.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
Allegro_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
allegro_driver/: CMakeLists.txt  README.md  package.xml
allegro_driver/config/: hand.rviz
allegro_driver/launch/: launch_all.launch.xml  start_hand.launch.py  start_hand.launch.xml  start_hand.xml
allegro_driver/src/: allegro_driver.cpp  finger_track.cpp  hello_moveit  hello_moveit.cpp  plan_hand.cpp
allegro_driver/urdf/: AllegroHandRight.xacro
allegro_hand_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
allegro_hand_moveit_config/config/: allegro_hand_right.ros2_control.xacro  allegro_hand_right.srdf  allegro_hand_right.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
allegro_hand_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
allegro_lib/: CMakeLists.txt  package.xml
allegro_lib/include/allegro_lib/: RockScissorsPaper.h  canAPI.h
allegro_lib/src/: RockScissorsPaper.cpp  canAPI.cpp
finger_tracking/: package.xml  setup.cfg  setup.py
finger_tracking/finger_tracking/: finger_tracking.py
finger_tracking/launch/: cam_node.launch.py
