cmake_minimum_required(VERSION 3.8)
project(allegro_driver)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_srvs REQUIRED)
find_package(std_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(tf2 REQUIRED)
find_package(moveit_common REQUIRED)
find_package(moveit_ros_planning_interface REQUIRED)
find_package(moveit_core REQUIRED)
find_package(moveit_ros_planning REQUIRED)

find_package(allegro_lib REQUIRED)
# Absolute path to the directory containg libBhand file
find_library(NAMES BHand PATHS home/ritz/WinterQ/Project/AllegroHandManipulation/Allegro_interface/src/libBHand_64/lib/libBHand.so)
add_executable(allegro_driver src/allegro_driver.cpp)
add_executable(plan_hand src/plan_hand.cpp)

target_link_libraries(allegro_driver BHand) 
ament_target_dependencies(allegro_driver rclcpp std_srvs std_msgs sensor_msgs allegro_lib)
ament_target_dependencies(plan_hand rclcpp std_msgs moveit_ros_planning_interface moveit_core moveit_ros_planning)

install(TARGETS allegro_driver plan_hand DESTINATION lib/${PROJECT_NAME})

install(DIRECTORY
  launch
  config
  meshes
  urdf
  DESTINATION share/${PROJECT_NAME}/
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()


ament_package()
